--- a/sdl.cbp
+++ b/sdl.cbp
@@ -12,10 +12,16 @@
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
+					<Add option="-Wall" />
+					<Add option="-std=c++11" />
 					<Add option="-g" />
 					<Add directory="src" />
 					<Add directory="./" />
 				</Compiler>
+				<Linker>
+					<Add directory="/home/jaca/work_space/boost_1_70_0/libs" />
+					<Add directory="/home/jaca/work_space/boost_1_70_0/boost" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/sdl" prefix_auto="1" extension_auto="1" />
@@ -41,10 +47,18 @@
 			<Add option="`sdl2-config --libs`" />
 		</Linker>
 		<Unit filename="main.cpp" />
+		<Unit filename="src/Display.cpp" />
+		<Unit filename="src/Display.h" />
+		<Unit filename="src/GameLogic.cpp" />
+		<Unit filename="src/GameLogic.h" />
 		<Unit filename="src/Game_Object.cpp" />
 		<Unit filename="src/Game_Object.h" />
 		<Unit filename="src/InitError.cpp" />
 		<Unit filename="src/InitError.h" />
+		<Unit filename="src/InputControl.cpp" />
+		<Unit filename="src/InputControl.h" />
+		<Unit filename="src/LogicInputState.cpp" />
+		<Unit filename="src/LogicInputState.h" />
 		<Unit filename="src/MainProgram.cpp" />
 		<Unit filename="src/MainProgram.h" />
 		<Unit filename="src/Map.cpp" />
