--- a/sdl.cbp
+++ b/sdl.cbp
@@ -51,6 +51,10 @@
 		<Unit filename="src/Display.h" />
 		<Unit filename="src/GameLogic.cpp" />
 		<Unit filename="src/GameLogic.h" />
+		<Unit filename="src/GameState.cpp" />
+		<Unit filename="src/GameState.h" />
+		<Unit filename="src/GameTimer.cpp" />
+		<Unit filename="src/GameTimer.h" />
 		<Unit filename="src/Game_Object.cpp" />
 		<Unit filename="src/Game_Object.h" />
 		<Unit filename="src/InitError.cpp" />
@@ -65,6 +69,10 @@
 		<Unit filename="src/Map.h" />
 		<Unit filename="src/Player.cpp" />
 		<Unit filename="src/Player.h" />
+		<Unit filename="src/ResourcesLoader.cpp" />
+		<Unit filename="src/ResourcesLoader.h" />
+		<Unit filename="src/UtilityLib.cpp" />
+		<Unit filename="src/UtilityLib.h" />
 		<Extensions>
 			<code_completion />
 			<envvars />
